--- a/content/marktplatz/1-1-3.md
+++ b/content/marktplatz/1-1-3.md
@@ -2,7 +2,8 @@
 title: "Bild 1-1-3"
 date: 2022-08-01T20:03:12+02:00
 draft: false
-bild: 1-1-3.jpg
+featured_image: "1-1-3.jpg"
 ---
+
 
 Markdown-Text für Singlepage aus der content/marktplatz/1-1-3.md
