--- a/content/marktplatz/1-01-03.md
+++ b/content/marktplatz/1-01-03.md
@@ -4,7 +4,7 @@ date: 2022-08-01T20:03:12+02:00
 draft: false
 featured_image: "1-01-03.jpg"
 tags: ["Stichwort 1", "Stichwort 2"]
-categories: [Marktplatz]
+categories: Marktplatz
 ---
 
 
