--- a/content/marktplatz/1-01-03.md
+++ b/content/marktplatz/1-01-03.md
@@ -5,6 +5,7 @@ draft: false
 featured_image: "1-01-03.jpg"
 tags: ["Stichwort 1", "Stichwort 2"]
 categories: Marktplatz
+categories_weight: 9
 ---
 
 
