--- a/content/Angermünder Straße/1-23-02.md
+++ b/content/Angermünder Straße/1-23-02.md
@@ -4,7 +4,7 @@ date: 2022-08-01T20:03:12+02:00
 draft: false
 featured_image: "1-23-02.jpg"
 tags: ["Stichwort 1", "Stichwort 2"]
-categories: Angermuender Strasse
+categories: Angermünder Straße
 ---
 
 
